--- a/assets/styles/sass/video-bumper.scss
+++ b/assets/styles/sass/video-bumper.scss
@@ -5,7 +5,7 @@
 		padding: 2rem 0 6rem 0;
 
 		#event-bumper {
-			margin-bottom: -4rem;
+			margin-bottom: 0rem;
 		}
 	}
 
@@ -73,7 +73,7 @@
 
 	@include breakpoint(small) {
 
-		margin-top: 2rem;
+		margin-top: 0rem;
 
 		video {
 			width: 100%;
